Google map styles and correct location + modal overflow ios fix?

--- a/src/styles/components/_map-modal.scss
+++ b/src/styles/components/_map-modal.scss
@@ -42,6 +42,6 @@
     }
 }
 
-.ReactModal__Body--open, #app {
-    overflow-y: hidden;
+.ReactModal__Body--open, body, #app, html {
+    overflow: hidden;
 }
